--- a/02_Model_training/02-Model_training_with_a_built-in_algorithm.Rmd
+++ b/02_Model_training/02-Model_training_with_a_built-in_algorithm.Rmd
@@ -299,9 +299,9 @@ Calling `default_bucket()` on the SageMaker session object will create the defau
 
 ```{r}
 bucket <- session$default_bucket()
-project = "hotels"
-data_path = paste0("s3://", bucket, "/", project, "/", "data")
-models_path = paste0("s3://", bucket, "/", project, "/", "models")
+project <- "hotels"
+data_path <- paste0("s3://", bucket, "/", project, "/", "data")
+models_path <- paste0("s3://", bucket, "/", project, "/", "models")
 ```
 
 
